# learnup-lms-payment

./: .gitignore  db.sqlite3  mypy.ini  pyproject.toml
apps/courses/: apps.py  models.py  serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py
apps/enrollments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/enrollments/migrations/: 0001_initial.py
apps/payments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_payment.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
