[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=25.2",
    "django-stubs>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
